ACLOCAL_AMFLAGS=-I m4

PHREEQCRM_EXTRA_DIST=\
	CMakeLists.txt\
	phreeqcrm.cmake.in\
	PhreeqcRMConfig.cmake.in\
	swig/CMakeLists.txt\
	swig/numpy.i\
	swig/PhreeqcRM.i\
	swig/pyfragments.swg.in\
	swig/python/AdvectBMI_py.py\
	swig/python/BMIPhreeqcRM_docstrings.swg\
	swig/python/CMakeLists.txt\
	swig/python/PhreeqcRM_docstrings.swg\
	swig/python/SimpleAdvect.py\
	swig/python/test_basic.py\
	swig/python/test_get_value.py\
	swig/python/test_irf.py\
	swig/python/test_set_value.py\
	swig/python/TestAllMethods_py.py\
	swig/python/WriteYAMLFile_py.py\
	swig/python/yamlphreeqcrm.py\
	swig/python/YAMLPhreeqcRM.swg

EXTRA_DIST=$(PHREEQCRM_EXTRA_DIST)

YAML_CPP_EXTRA_DIST=\
	ext/yaml-cpp\
	ext/yaml-cpp/.clang-format\
	ext/yaml-cpp/.codedocs\
	ext/yaml-cpp/.github\
	ext/yaml-cpp/.github/workflows\
	ext/yaml-cpp/.github/workflows/build.yml\
	ext/yaml-cpp/.gitignore\
	ext/yaml-cpp/BUILD.bazel\
	ext/yaml-cpp/CMakeLists.txt\
	ext/yaml-cpp/cmake_uninstall.cmake.in\
	ext/yaml-cpp/CONTRIBUTING.md\
	ext/yaml-cpp/docs\
	ext/yaml-cpp/docs/Breaking-Changes.md\
	ext/yaml-cpp/docs/How-To-Emit-YAML.md\
	ext/yaml-cpp/docs/How-To-Parse-A-Document-(Old-API).md\
	ext/yaml-cpp/docs/index.md\
	ext/yaml-cpp/docs/Strings.md\
	ext/yaml-cpp/docs/Tutorial.md\
	ext/yaml-cpp/docs/_config.yml\
	ext/yaml-cpp/include\
	ext/yaml-cpp/include/yaml-cpp\
	ext/yaml-cpp/include/yaml-cpp/anchor.h\
	ext/yaml-cpp/include/yaml-cpp/binary.h\
	ext/yaml-cpp/include/yaml-cpp/contrib\
	ext/yaml-cpp/include/yaml-cpp/contrib/anchordict.h\
	ext/yaml-cpp/include/yaml-cpp/contrib/graphbuilder.h\
	ext/yaml-cpp/include/yaml-cpp/depthguard.h\
	ext/yaml-cpp/include/yaml-cpp/dll.h\
	ext/yaml-cpp/include/yaml-cpp/emitfromevents.h\
	ext/yaml-cpp/include/yaml-cpp/emitter.h\
	ext/yaml-cpp/include/yaml-cpp/emitterdef.h\
	ext/yaml-cpp/include/yaml-cpp/emittermanip.h\
	ext/yaml-cpp/include/yaml-cpp/emitterstyle.h\
	ext/yaml-cpp/include/yaml-cpp/eventhandler.h\
	ext/yaml-cpp/include/yaml-cpp/exceptions.h\
	ext/yaml-cpp/include/yaml-cpp/mark.h\
	ext/yaml-cpp/include/yaml-cpp/node\
	ext/yaml-cpp/include/yaml-cpp/node/convert.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail\
	ext/yaml-cpp/include/yaml-cpp/node/detail/impl.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/iterator.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/iterator_fwd.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/memory.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/node.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/node_data.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/node_iterator.h\
	ext/yaml-cpp/include/yaml-cpp/node/detail/node_ref.h\
	ext/yaml-cpp/include/yaml-cpp/node/emit.h\
	ext/yaml-cpp/include/yaml-cpp/node/impl.h\
	ext/yaml-cpp/include/yaml-cpp/node/iterator.h\
	ext/yaml-cpp/include/yaml-cpp/node/node.h\
	ext/yaml-cpp/include/yaml-cpp/node/parse.h\
	ext/yaml-cpp/include/yaml-cpp/node/ptr.h\
	ext/yaml-cpp/include/yaml-cpp/node/type.h\
	ext/yaml-cpp/include/yaml-cpp/noexcept.h\
	ext/yaml-cpp/include/yaml-cpp/null.h\
	ext/yaml-cpp/include/yaml-cpp/ostream_wrapper.h\
	ext/yaml-cpp/include/yaml-cpp/parser.h\
	ext/yaml-cpp/include/yaml-cpp/stlemitter.h\
	ext/yaml-cpp/include/yaml-cpp/traits.h\
	ext/yaml-cpp/include/yaml-cpp/yaml.h\
	ext/yaml-cpp/install.txt\
	ext/yaml-cpp/LICENSE\
	ext/yaml-cpp/README.md\
	ext/yaml-cpp/src\
	ext/yaml-cpp/src/binary.cpp\
	ext/yaml-cpp/src/collectionstack.h\
	ext/yaml-cpp/src/contrib\
	ext/yaml-cpp/src/contrib/graphbuilder.cpp\
	ext/yaml-cpp/src/contrib/graphbuilderadapter.cpp\
	ext/yaml-cpp/src/contrib/graphbuilderadapter.h\
	ext/yaml-cpp/src/contrib/yaml-cpp.natvis\
	ext/yaml-cpp/src/contrib/yaml-cpp.natvis.md\
	ext/yaml-cpp/src/convert.cpp\
	ext/yaml-cpp/src/depthguard.cpp\
	ext/yaml-cpp/src/directives.cpp\
	ext/yaml-cpp/src/directives.h\
	ext/yaml-cpp/src/emit.cpp\
	ext/yaml-cpp/src/emitfromevents.cpp\
	ext/yaml-cpp/src/emitter.cpp\
	ext/yaml-cpp/src/emitterstate.cpp\
	ext/yaml-cpp/src/emitterstate.h\
	ext/yaml-cpp/src/emitterutils.cpp\
	ext/yaml-cpp/src/emitterutils.h\
	ext/yaml-cpp/src/exceptions.cpp\
	ext/yaml-cpp/src/exp.cpp\
	ext/yaml-cpp/src/exp.h\
	ext/yaml-cpp/src/indentation.h\
	ext/yaml-cpp/src/memory.cpp\
	ext/yaml-cpp/src/node.cpp\
	ext/yaml-cpp/src/nodebuilder.cpp\
	ext/yaml-cpp/src/nodebuilder.h\
	ext/yaml-cpp/src/nodeevents.cpp\
	ext/yaml-cpp/src/nodeevents.h\
	ext/yaml-cpp/src/node_data.cpp\
	ext/yaml-cpp/src/null.cpp\
	ext/yaml-cpp/src/ostream_wrapper.cpp\
	ext/yaml-cpp/src/parse.cpp\
	ext/yaml-cpp/src/parser.cpp\
	ext/yaml-cpp/src/ptr_vector.h\
	ext/yaml-cpp/src/regeximpl.h\
	ext/yaml-cpp/src/regex_yaml.cpp\
	ext/yaml-cpp/src/regex_yaml.h\
	ext/yaml-cpp/src/scanner.cpp\
	ext/yaml-cpp/src/scanner.h\
	ext/yaml-cpp/src/scanscalar.cpp\
	ext/yaml-cpp/src/scanscalar.h\
	ext/yaml-cpp/src/scantag.cpp\
	ext/yaml-cpp/src/scantag.h\
	ext/yaml-cpp/src/scantoken.cpp\
	ext/yaml-cpp/src/setting.h\
	ext/yaml-cpp/src/simplekey.cpp\
	ext/yaml-cpp/src/singledocparser.cpp\
	ext/yaml-cpp/src/singledocparser.h\
	ext/yaml-cpp/src/stream.cpp\
	ext/yaml-cpp/src/stream.h\
	ext/yaml-cpp/src/streamcharsource.h\
	ext/yaml-cpp/src/stringsource.h\
	ext/yaml-cpp/src/tag.cpp\
	ext/yaml-cpp/src/tag.h\
	ext/yaml-cpp/src/token.h\
	ext/yaml-cpp/test\
	ext/yaml-cpp/test/binary_test.cpp\
	ext/yaml-cpp/test/BUILD.bazel\
	ext/yaml-cpp/test/CMakeLists.txt\
	ext/yaml-cpp/test/create-emitter-tests.py\
	ext/yaml-cpp/test/gtest-1.11.0\
	ext/yaml-cpp/test/gtest-1.11.0/.clang-format\
	ext/yaml-cpp/test/gtest-1.11.0/.github\
	ext/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE\
	ext/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/00-bug_report.md\
	ext/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/10-feature_request.md\
	ext/yaml-cpp/test/gtest-1.11.0/.github/ISSUE_TEMPLATE/config.yml\
	ext/yaml-cpp/test/gtest-1.11.0/.gitignore\
	ext/yaml-cpp/test/gtest-1.11.0/BUILD.bazel\
	ext/yaml-cpp/test/gtest-1.11.0/ci\
	ext/yaml-cpp/test/gtest-1.11.0/ci/linux-presubmit.sh\
	ext/yaml-cpp/test/gtest-1.11.0/ci/macos-presubmit.sh\
	ext/yaml-cpp/test/gtest-1.11.0/CMakeLists.txt\
	ext/yaml-cpp/test/gtest-1.11.0/CONTRIBUTING.md\
	ext/yaml-cpp/test/gtest-1.11.0/CONTRIBUTORS\
	ext/yaml-cpp/test/gtest-1.11.0/docs\
	ext/yaml-cpp/test/gtest-1.11.0/docs/advanced.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/assets\
	ext/yaml-cpp/test/gtest-1.11.0/docs/assets/css\
	ext/yaml-cpp/test/gtest-1.11.0/docs/assets/css/style.scss\
	ext/yaml-cpp/test/gtest-1.11.0/docs/community_created_documentation.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/faq.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/gmock_cheat_sheet.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/gmock_cook_book.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/gmock_faq.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/gmock_for_dummies.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/index.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/pkgconfig.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/platforms.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/primer.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/quickstart-bazel.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/quickstart-cmake.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference/actions.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference/assertions.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference/matchers.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference/mocking.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/reference/testing.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/samples.md\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_config.yml\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_data\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_data/navigation.yml\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_layouts\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_layouts/default.html\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_sass\
	ext/yaml-cpp/test/gtest-1.11.0/docs/_sass/main.scss\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/cmake\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/cmake/gmock.pc.in\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/cmake/gmock_main.pc.in\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/CMakeLists.txt\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/docs\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/docs/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-actions.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-cardinalities.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-function-mocker.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-matchers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-actions.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-more-matchers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-nice-strict.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock-spec-builders.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/gmock.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-generated-actions.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-matchers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/gmock-port.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/custom/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-internal-utils.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-port.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/include/gmock/internal/gmock-pp.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/fuse_gmock_files.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/ast.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/gmock_class.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/gmock_class_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/keywords.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/tokenize.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/utils.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/cpp/__init__.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/gmock_gen.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/LICENSE\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/README\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/generator/README.cppclean\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/scripts/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-all.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-cardinalities.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-internal-utils.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-matchers.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock-spec-builders.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/src/gmock_main.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/BUILD.bazel\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-actions_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-cardinalities_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-function-mocker_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-internal-utils_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-matchers_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-more-actions_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-nice-strict_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-port_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp-string_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-pp_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock-spec-builders_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_all_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_ex_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_leak_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_leak_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link2_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_link_test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_output_test_golden.txt\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_stress_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googlemock/test/gmock_test_utils.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake/Config.cmake.in\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake/gtest.pc.in\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake/gtest_main.pc.in\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake/internal_utils.cmake\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/cmake/libgtest.la.in\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/CMakeLists.txt\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/docs\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/docs/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-death-test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-matchers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-message.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-param-test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-printers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-spi.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-test-part.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest-typed-test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_pred_impl.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/gtest_prod.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-port.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest-printers.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/gtest.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/custom/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-death-test-internal.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-filepath.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-internal.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-param-util.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port-arch.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-port.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-string.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/include/gtest/internal/gtest-type-util.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/prime_tables.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample10_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample1_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample2_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3-inl.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample3_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample4_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample5_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample6_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample7_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample8_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/samples/sample9_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/common.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/fuse_gtest_files.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/gen_gtest_pred_impl.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/gtest-config.in\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/release_docs.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/run_with_path.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/upload.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/scripts/upload_gtest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-all.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-death-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-filepath.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-internal-inl.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-matchers.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-port.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-printers.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-test-part.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest-typed-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/src/gtest_main.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/BUILD.bazel\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-break-on-failure-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-break-on-failure-unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-catch-exceptions-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-catch-exceptions-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-color-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-color-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-death-test_ex_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-env-var-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-env-var-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-failfast-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-failfast-unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filepath-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filter-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-filter-unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-global-environment-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-global-environment-unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-json-outfiles-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-json-output-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-list-tests-unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-list-tests-unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-listener-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-message-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-options-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test-golden-lin.txt\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-output-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name1-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name1-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name2-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-invalid-name2-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test-test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-param-test2-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-port-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-printers-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-setuptestsuite-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-setuptestsuite-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-shuffle-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-shuffle-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-test-part-test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-throw-on-failure-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-throw-on-failure-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-uninitialized-test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/googletest-uninitialized-test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test2_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-typed-test_test.h\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest-unittest-api_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_all_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_assert_by_exception_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_environment_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_help_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_help_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_json_test_utils.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_list_output_unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_list_output_unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_main_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_no_test_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_pred_impl_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_premature_exit_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_prod_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_repeat_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_check_output_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_environment_check_output_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_in_environment_setup_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_skip_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_sole_header_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_stress_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_testbridge_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_testbridge_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_test_macro_stack_footprint_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_test_utils.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_throw_on_failure_ex_test.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_unittest.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile1_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfile2_test_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_outfiles_test.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_output_unittest.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_output_unittest_.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/gtest_xml_test_utils.py\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/production.cc\
	ext/yaml-cpp/test/gtest-1.11.0/googletest/test/production.h\
	ext/yaml-cpp/test/gtest-1.11.0/library.json\
	ext/yaml-cpp/test/gtest-1.11.0/LICENSE\
	ext/yaml-cpp/test/gtest-1.11.0/README.md\
	ext/yaml-cpp/test/gtest-1.11.0/WORKSPACE\
	ext/yaml-cpp/test/handler_test.h\
	ext/yaml-cpp/test/integration\
	ext/yaml-cpp/test/integration/emitter_test.cpp\
	ext/yaml-cpp/test/integration/encoding_test.cpp\
	ext/yaml-cpp/test/integration/error_messages_test.cpp\
	ext/yaml-cpp/test/integration/gen_emitter_test.cpp\
	ext/yaml-cpp/test/integration/handler_spec_test.cpp\
	ext/yaml-cpp/test/integration/handler_test.cpp\
	ext/yaml-cpp/test/integration/load_node_test.cpp\
	ext/yaml-cpp/test/integration/node_spec_test.cpp\
	ext/yaml-cpp/test/main.cpp\
	ext/yaml-cpp/test/mock_event_handler.h\
	ext/yaml-cpp/test/node\
	ext/yaml-cpp/test/node/node_test.cpp\
	ext/yaml-cpp/test/ostream_wrapper_test.cpp\
	ext/yaml-cpp/test/parser_test.cpp\
	ext/yaml-cpp/test/regex_test.cpp\
	ext/yaml-cpp/test/specexamples.h\
	ext/yaml-cpp/util\
	ext/yaml-cpp/util/api.cpp\
	ext/yaml-cpp/util/CMakeLists.txt\
	ext/yaml-cpp/util/parse.cpp\
	ext/yaml-cpp/util/read.cpp\
	ext/yaml-cpp/util/sandbox.cpp\
	ext/yaml-cpp/WORKSPACE\
	ext/yaml-cpp/yaml-cpp-config.cmake.in\
	ext/yaml-cpp/yaml-cpp.pc.in

EXTRA_DIST+=$(YAML_CPP_EXTRA_DIST)

AM_CPPFLAGS=-I$(top_srcdir)/src/IPhreeqcPhast -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common -I$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords

AM_LDFLAGS=-release 3.0.0
# AM_LDFLAGS= -no-undefined -release 3.0.0

pkgconfigdir = $(datadir)/pkgconfig
pkgconfig_DATA = phreeqcrm.pc

# libtool libraries to build
lib_LTLIBRARIES=libphreeqcrm.la

# library sources for libphreeqcrm.la
libphreeqcrm_la_SOURCES=\
	src/BMI_interface_F.cpp\
	src/BMI_interface_F.h\
	src/BMIVariant.cpp\
	src/BMIVariant.h\
	src/bmi.hxx\
	src/BMIPhreeqcRM.cpp\
	src/BMIPhreeqcRM.h\
	src/IPhreeqcPhast/IPhreeqc/CSelectedOutput.cpp\
	src/IPhreeqcPhast/IPhreeqc/CSelectedOutput.hxx\
	src/IPhreeqcPhast/IPhreeqc/CVar.hxx\
	src/IPhreeqcPhast/IPhreeqc/Debug.h\
	src/IPhreeqcPhast/IPhreeqc/ErrorReporter.hxx\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface_F.cpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface_F.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.cpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc.hpp\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqcCallbacks.h\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqcLib.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/advection.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/basicsubs.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cl1.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_exports.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/phrqtype.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Utils.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Utils.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvdense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvdense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvode.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cvode.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxKinetics.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxKinetics.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxMix.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/cxxMix.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Dictionary.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Dictionary.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dumper.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/dumper.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Exchange.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Exchange.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ExchComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ExchComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/gases.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasPhase.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/GasPhase.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/global_structures.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/input.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/integrate.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/inverse.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolution.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolution.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolutionComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ISolutionComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/isotopes.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/kinetics.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/KineticsComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/KineticsComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/mainsubs.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/model.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NA.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NumKeyword.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NumKeyword.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector_serial.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector_serial.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/nvector.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/parse.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PBasic.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PBasic.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/phqalloc.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/phqalloc.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Phreeqc.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Phreeqc.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PHRQ_io_output.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/pitzer_structures.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/pitzer.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblage.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblage.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblageComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PPassemblageComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/prep.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Pressure.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Pressure.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/print.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Reaction.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Reaction.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/read.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/ReadClass.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/readtr.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/runner.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/runner.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SelectedOutput.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SelectedOutput.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Serializer.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Serializer.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sit.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/smalldense.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/smalldense.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Solution.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Solution.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SolutionIsotope.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SolutionIsotope.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/spread.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SS.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SS.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SSassemblage.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SSassemblage.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SScomp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SScomp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/step.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBinList.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBinList.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/structures.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialsmath.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialsmath.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/sundialstypes.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Surface.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Surface.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceCharge.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceCharge.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceComp.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/SurfaceComp.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/tally.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Temperature.cxx\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Temperature.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/tidy.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/transport.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Use.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/Use.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/UserPunch.cpp\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/UserPunch.h\
	src/IPhreeqcPhast/IPhreeqc/phreeqcpp/utilities.cpp\
	src/IPhreeqcPhast/IPhreeqc/thread.h\
	src/IPhreeqcPhast/IPhreeqc/Var.c\
	src/IPhreeqcPhast/IPhreeqc/Var.h\
	src/IPhreeqcPhast/IPhreeqc/Version.h\
	src/IPhreeqcPhast/IPhreeqcPhast.cxx\
	src/IPhreeqcPhast/IPhreeqcPhast.h\
	src/IPhreeqcPhast/IPhreeqcPhastLib.cpp\
	src/IPhreeqcPhast/IPhreeqcPhastLib.h\
	src/PhreeqcRM.cpp\
	src/RM_interface_C.cpp\
	src/RM_interface_F.cpp\
	src/RM_interface_F.h\
	src/RMVARS.h\
	src/VarManager.cpp\
	src/VarManager.h\
	src/YAML_interface_F.cpp\
	src/YAML_interface_F.h\
	src/YAMLPhreeqcRM.cpp\
	src/YAMLPhreeqcRM.h

include_HEADERS=\
	$(top_builddir)/irm_dll_export.h\
	$(top_srcdir)/src/BMIVariant.h\
	$(top_srcdir)/src/bmi.hxx\
	$(top_srcdir)/src/BMIPhreeqcRM.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqc.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqc.hpp\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/IPhreeqcCallbacks.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/Parser.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_base.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_exports.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/PHRQ_io.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/common/phrqtype.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/NameDouble.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/PhreeqcKeywords/Keywords.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/StorageBin.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/phreeqcpp/System.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqc/Var.h\
	$(top_srcdir)/src/IPhreeqcPhast/IPhreeqcPhast.h\
	$(top_srcdir)/src/IrmResult.h\
	$(top_srcdir)/src/PhreeqcRM.h\
	$(top_srcdir)/src/RM_interface_C.h\
	$(top_srcdir)/src/RMVARS.h\
	$(top_srcdir)/src/VarManager.h\
	$(top_srcdir)/src/YAMLPhreeqcRM.h

FCDEFS=
if PHREEQCRM_TEST_FORTRAN
DEFS+=-DTEST_FORTRAN
FCDEFS+=-DTEST_FORTRAN
endif

# Docs
#
sourcedir=$(docdir)/src

dist_source_DATA=$(SRC)

SRC=\
	src/BMI_interface.F90\
	src/BMI_not_implemented.inc\
	src/IPhreeqcPhast/IPhreeqc/IPhreeqc_interface.F90\
	src/RM_interface.F90\
	src/YAML_interface.F90


# We must override the default PPFCCOMPILE since ifort can't
# handle the FC_FUNC define correctly so $(DEFS) is replaced
# by $(FCDEFS)
#
if PHREEQCRM_WITH_YAMLCPP
FCDEFS+=-DUSE_YAML
endif
PPFCCOMPILE = $(FC) $(FCDEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
        $(AM_CPPFLAGS) $(CPPFLAGS) $(AM_FCFLAGS) $(FCFLAGS)
LTPPFCCOMPILE = $(LIBTOOL) $(AM_V_lt) --tag=FC $(AM_LIBTOOLFLAGS) \
        $(LIBTOOLFLAGS) --mode=compile $(FC) $(FCDEFS) \
        $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) \
        $(AM_FCFLAGS) $(FCFLAGS)

SUBDIRS = database doc Doxygen Tests
